# alex

./: .gitignore  Cargo.toml  README.md
assets/: instancing.wgsl  shader.wgsl  voxelization.wgsl
assets/palette/: blockstates.json
assets/worlds/imperial_city/: r.-3.4.mca  r.-4.-1.mca  r.-4.3.mca  r.1.-2.mca  r.1.4.mca  r.2.-1.mca  r.2.2.mca  r.2.3.mca
src/: character.rs  main.rs  ui.rs
src/render_pipeline/: cpu_brickmap.rs  gpu_brickmap.rs  load_anvil.rs  mod.rs  voxel_render.rs  voxel_streaming.rs  voxel_world.rs
src/render_pipeline/main_pass/: mod.rs  node.rs
