[package]
name = "alex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_egui = "0.21"
fastanvil = "0.28"
fastnbt = "2.4"
serde_json = "1.0"
bevy-inspector-egui = "0.19"
wgpu = { version = "0.16", default-features = false }
